<resources>
    <string name="app_name">My TV</string>
    <string name="content_authority">com.algalopez.mytv</string>

    <string name="test1">Test1</string>
    <string name="test2">Test2</string>
    <string name="test3">Test3</string>
    <string name="test4">1</string>
    <string name="test5">This is a long test</string>
    <string name="image_description">Image description</string>

    <string name="overflow_settings">Settings</string>
    <string name="overflow_about">About</string>

    <string name="action_settings">Settings</string>
    <string name="action_favourite">Save/Remove</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>


    <!-- ACTIVITY TOOLBAR TITLES -->
    <string name="activity_favourites">FAVOURITES</string>
    <string name="activity_show">SHOW</string>
    <string name="activity_season">SEASON</string>
    <string name="activity_episode">EPISODE</string>
    <string name="activity_search">SEARCH</string>
    <string name="activity_settings">SETTINGS</string>
    <string name="activity_about">ABOUT</string>


    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="rated">Rated</string>
    <string name="released">Released</string>
    <string name="runtime">Runtime</string>
    <string name="genre">Genre</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="actors">Actors</string>
    <string name="plot">Plot</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="awards">Awards</string>
    <string name="metascore">Metascore</string>
    <string name="imdbrating">Rating</string>
    <string name="imdbvotes">Votes</string>
    <string name="imdbid">ID</string>
    <string name="type">Type</string>
    <string name="totalseasons">Total seasons</string>
    <string name="image">Image</string>

    <string name="season">Season</string>
    <string name="episode">Episode</string>
    <string name="releasedfirst">Released first</string>
    <string name="releasedlast">Released last</string>


    <string name="imdb">Imdb</string>

    <string name="found">Found</string>
    <string name="results">results</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Toasts -->
    <string name="toast_history_deleted">History Deleted</string>


    <!-- Dialogs -->
    <string name="dialog_title">Are you sure you want to&#8230; </string>
    <string name="dialog_remove_show">Remove this show from favourites?</string>
    <string name="dialog_save_show">Add this show to favourites?</string>
    <string name="dialog_update_show">Update this show?</string>
    <string name="dialog_update_season">Update this season?</string>
    <string name="dialog_update_episode">Update this episode?</string>
    <string name="dialog_remove_History">Delete History?</string>



    <!-- Settings -->
    <string name="history">History</string>
    <string name="delete_history1">Delete History</string>
    <string name="delete_history">Delete</string>
    <string name="settings_order">Order by</string>
    <string name="settings_order_name">Name</string>
    <string name="settings_order_rating">Rating</string>





</resources>
